# Kaaj

./: .gitignore  DECISIONS.md  README.md  sql_app.db
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  auth.py  docker-compose.local.yml  docker-compose.yml  lender_match.db  main.py  matching.py  models.py  pyproject.toml  worker.py
backend/routers/: __init__.py  admin.py  applications.py  auth.py  programs.py  seed.py
backend/schemas/: __init__.py  application.py  auth.py  lender.py  policy.py  program.py
backend/services/: pdf_parser.py
backend/tests/: test_matching.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: AdminGate.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx  ThemeDropdown.tsx
frontend/src/components/ui/: badge.tsx  dropdown.tsx  portal.tsx
frontend/src/context/: auth.tsx  sidebar.tsx  theme.tsx
frontend/src/pages/: ApplicationDetail.tsx  Applications.tsx  Login.tsx  NewApplication.tsx  Programs.tsx  Register.tsx
pdf/: doc.md
